# LearnComputerVersion

./: CMakeLists.txt  README.md
Camera_Calidration/: calibration.cpp  lab3_calibration.cpp  lab3_camera_params.txt  lab3_img_list.txt  test_calibration_output.txt  test_img_list.txt
Course_Lab_1/openCVDemo1/: main.cpp  openCVDemo.pro
Course_Lab_1/openCVDemo2/: main.cpp  openCVDemo2.pro  opencvworker.cpp  opencvworker.h  qcvwidget.cpp  qcvwidget.h  qcvwidget.ui
Course_Lab_2/Assignment1/: Assignment1.pro  main.cpp
Course_Lab_2/Assignment2/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Course_Lab_4/Assignment1/: main.cpp  try_hierarchy.cpp
Course_Lab_4/Assignment2/: main.cpp
Course_Lab_5/: Assignment1.cpp  Assignment2.cpp  Assignment2.py  FaceRecognize.cpp  FaceRecognize.py  face_detect.py
Course_Lab_6/: Assignment1.cpp
FinalProject/FinalProject/: FinalProject.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp
Opencv_with_Python/: Day1.ipynb  README.md
